# gr-specest

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt~  MANIFEST.md  README  README_37.txt  gnuradio-specest.pc.in
CMake/: FindArmadillo.cmake
apps/: CMakeLists.txt  specest_cyclo_fam_plot.py  specest_from_file.py  specest_uhd.py  usrp_burg_rt.py  usrp_welch_rt.py
apps/specest_gui/: CMakeLists.txt  README  specest_gui.py  specest_window.py  specest_window.ui
cmake/Modules/: Armadillo.cmake  specestConfig.cmake
doc/: CMakeLists.txt  README
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  doc.h
doc/doxygen/.svn/: all-wcprops  entries
doc/doxygen/.svn/text-base/: Doxyfile.in.svn-base
doc/doxygen/other/: main_page.dox
docs/: CMakeLists.txt  README.specest
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: specest_cyclo_fam_dec_bpsk_qpsk.py  specest_noisy_sinusoid_mtm.py
examples/grc/: burg.grc  esprit_freqest.grc  esprit_pspectrum.grc  fmcov_pspectrum.grc  music_pspectrum.grc  welch_qt.grc  welch_spectrum.grc
grc/: CMakeLists.txt  specest.tree.yml  specest_adaptiveweighting_vff.block.yml  specest_adaptiveweighting_vff.xml  specest_arburg_vcc.block.yml  specest_arburg_vcc.xml  specest_arfcov_vcc.block.yml  specest_arfcov_vcc.xml  specest_arfmcov_vcc.block.yml  specest_arfmcov_vcc.xml  specest_burg.block.yml  specest_burg.xml  specest_cyclo_fam.block.yml  specest_cyclo_fam.xml  specest_cyclo_fam_calcspectrum_vcf.block.yml  specest_cyclo_fam_calcspectrum_vcf.xml  specest_doa_esprit_vcf.xml  specest_doa_music_vcf.xml  specest_esprit.block.yml  specest_esprit.xml  specest_esprit_spectrum_vcf.block.yml  specest_esprit_spectrum_vcf.xml  specest_esprit_vcf.block.yml  specest_esprit_vcf.xml  specest_fcov.block.yml  specest_fcov.xml  specest_fmcov.block.yml  specest_fmcov.xml  specest_moving_average_vff.block.yml  specest_moving_average_vff.xml  specest_music.block.yml  specest_music.xml  specest_music_spectrum_vcf.block.yml  specest_music_spectrum_vcf.xml  specest_music_vcf.block.yml  specest_music_vcf.xml  specest_pad_vector.block.yml  specest_pad_vector.xml  specest_reciprocal_ff.block.yml  specest_reciprocal_ff.xml  (+8 more)
include/: CMakeLists.txt  specest_adaptiveweighting_vff.h  specest_api.h  specest_arburg_impl.h  specest_arburg_vcc.h  specest_arfcov_impl.h  specest_arfcov_vcc.h  specest_arfmcov_impl.h  specest_arfmcov_vcc.h  specest_burg.h  specest_correst_impl.h  specest_cyclo_fam.h  specest_cyclo_fam_calcspectrum_impl.h  specest_cyclo_fam_calcspectrum_vcf.h  specest_esprit.h  specest_esprit_fortran_impl.h  specest_esprit_impl.h  specest_esprit_spectrum_vcf.h  specest_esprit_vcf.h  specest_fcov.h  specest_fmcov.h  specest_moving_average_vff.h  specest_music.h  specest_music_armadillo_impl.h  specest_music_fortran_impl.h  specest_music_impl.h  specest_music_spectrum_vcf.h  specest_music_vcf.h  specest_pad_vector.h  specest_reciprocal_ff.h  specest_stream_to_vector_overlap.h  specest_welch.h  specest_welchsp.h
include/specest/: CMakeLists.txt  adaptiveweighting_vff.h  api.h  arburg_algo.h  arburg_vcc.h  arfcov_algo.h  arfcov_vcc.h  arfmcov_algo.h  arfmcov_vcc.h  burg.h  correst_algo.h  cyclo_fam.h  cyclo_fam_calcspectrum_algo.h  cyclo_fam_calcspectrum_vcf.h  esprit.h  esprit_algo.h  esprit_fortran_algo.h  esprit_spectrum_vcf.h  esprit_vcf.h  fcov.h  fmcov.h  moving_average_vff.h  music.h  music_algo.h  music_armadillo_algo.h  music_fortran_algo.h  music_spectrum_vcf.h  music_vcf.h  pad_vector.h  reciprocal_ff.h  stream_to_vector_overlap.h  welch.h  welchsp.h
lib/: CMakeLists.txt  adaptiveweighting_vff_impl.cc  adaptiveweighting_vff_impl.h  arburg_algo.cc  arburg_vcc_impl.cc  arburg_vcc_impl.h  arfcov_algo.cc  arfcov_vcc_impl.cc  arfcov_vcc_impl.h  arfmcov_algo.cc  arfmcov_vcc_impl.cc  arfmcov_vcc_impl.h  burg_impl.cc  burg_impl.h  config.h.in  correst_algo.cc  cyclo_fam_calcspectrum_algo.cc  cyclo_fam_calcspectrum_vcf_impl.cc  cyclo_fam_calcspectrum_vcf_impl.h  cyclo_fam_impl.cc  cyclo_fam_impl.h  esprit_fortran_algo.cc  esprit_impl.cc  esprit_impl.h  esprit_spectrum_vcf_impl.cc  esprit_spectrum_vcf_impl.h  esprit_vcf_impl.cc  esprit_vcf_impl.h  fcov_impl.cc  fcov_impl.h  fmcov_impl.cc  fmcov_impl.h  moving_average_vff_impl.cc  moving_average_vff_impl.h  music_armadillo_algo.cc  music_fortran_algo.cc  music_impl.cc  music_impl.h  music_spectrum_vcf_impl.cc  music_spectrum_vcf_impl.h  (+110 more)
python/: CMakeLists.txt  __init__.py  fam_matplotlib.py  logpwrspectrum.py  qa_adaptiveweighting_vff.py  qa_arburg_vcc.py  qa_arfcov_vcc.py  qa_arfmcov_vcc.py  qa_burg.py  qa_cyclo_fam.py  qa_cyclo_fam_calcspectrum_vcf.py  qa_esprit.py  qa_esprit_spectrum_vcf.py  qa_esprit_vcf.py  qa_fcov.py  qa_fmcov.py  qa_moving_average_vff.py  qa_music.py  qa_music_spectrum_vcf.py  qa_music_vcf.py  qa_pad_vector.py  qa_reciprocal_ff.py  qa_specest_burg.py  qa_specest_cyclo_fam.py  qa_specest_esprit.py  qa_specest_esprit_spectrum_vcf.py  qa_specest_esprit_vcf.py  qa_specest_fcov.py  qa_specest_fmcov.py  qa_specest_gendpss.py  qa_specest_mtm.py  qa_specest_music.py  qa_specest_vectormanip.py  qa_specest_welch.py  qa_specest_welchsp.py  qa_stream_to_vector_overlap.py  qa_welch.py  qa_welchsp.py  signal_generator.py  specest_gendpss.py  (+4 more)
swig/: CMakeLists.txt  __init__.py  specest.i.in  specest_adaptiveweighting_vff.i  specest_arburg_vcc.i  specest_arfcov_vcc.i  specest_arfmcov_vcc.i  specest_armadillo_swig.i  specest_burg.i  specest_cyclo_fam.i  specest_esprit.i  specest_esprit_spectrum_vcf.i  specest_esprit_vcf.i  specest_fcov.i  specest_fmcov.i  specest_moving_average_vff.i  specest_music.i  specest_music_spectrum_vcf.i  specest_music_vcf.i  specest_pad_vector.i  specest_reciprocal_ff.i  specest_stream_to_vector_overlap.i  specest_swig.i  specest_swig.i.in  specest_welch.i  specest_welchsp.i
